--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/Nivel basico de mi aprendizaje/Calculadora GUI/nbproject/private/
+/Nivel basico de mi aprendizaje/Calculadora GUI/build/
+/Nivel basico de mi aprendizaje/Calculadora GUI/dist/
+/Nivel basico de mi aprendizaje/snake/nbproject/private/
+/Nivel basico de mi aprendizaje/snake/build/
+/Nivel basico de mi aprendizaje/snake/dist/
